--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,8 +17,6 @@ services:
   genesis:
     <<: *x-build-opts
     <<: *x-logging-opts
-    image: maliciousgenius/doer
     volumes:
-      # сокет - это канал деятелю и источнику
-      # - /var/run/docker.sock:/var/run/docker.sock
-      - ./space:/space:rw
+      # сокет - это один из каналов к деятелю и источнику
+      - /var/run/docker.sock:/var/run/docker.sock
